# l-learn

./: .gitignore  go.mod  go.sum
associated_fns_methods/: Cargo.toml
associated_fns_methods/src/: main.rs
c++/first-class/array/: main.cpp
c/1/: main.cpp
c/2/: sum.cpp
c/calculate/: main.cpp
closure/as_output/src/: main.rs
closure/src/: main.rs
dsa/: double_end_queue.py  dynamic_arr.py  insert_sort.py  merge_sort.py  singly_lined_list.py
dsa/basic/: main.go
dsa/linked_list/undo_redo/: main.go
dsa/lru/: main.go
go/cal_engine/: main.go
go/signal/: main.go
match_/src/: main.rs
mod_declaration/src/: main.rs
mod_file_hierarchy/: Cargo.toml
mod_file_hierarchy/src/: main.rs  my.rs
mod_super_self/: Cargo.toml
modules/src/: main.rs
modules_str/: Cargo.toml
modules_str/src/: main.rs
pg/aggregate/: Cargo.toml  aggregate.control
pg/aggregate/src/: lib.rs
pg/utils/: Makefile  deploy.sh  utils--0.0.1.sql  utils.c  utils.control
rust/associated_fns_methods/src/mn/: point.rs
rust/basic/closure/as_input_parameters/src/: main.rs
rust/basic/closure/iterator-any/src/: main.rs
rust/basic/constants_/: Cargo.toml
rust/basic/hof/src/: main.rs
rust/basic/match_/src/: main.rs
rust/basic/mod_declaration/: Cargo.toml
rust/basic/mod_file_hierarchy/src/my2/: mod.rs
rust/closure/as_output/: Cargo.toml
rust/closure/capture/src/: main.rs
rust/constants_/src/: main.rs
rust/custom/src/: main.rs
rust/enum_/src/: main.rs
rust/graceful-shutdown/: Cargo.toml
rust/mod_file_hierarchy/src/my/: nested.rs
rust/mod_file_hierarchy/src/my2/: nested.rs
rust/mod_super_self/src/: main.rs
rust/rs-api/: Cargo.toml
rust/rs-api/cmd/server/: Cargo.toml  server.rs
rust/rs-api/crates/api/: Cargo.toml  api.rs
rust/rs-api/crates/config/: Cargo.toml  config.rs
rust/todo/: Cargo.toml
rust/todo/crates/api/: Cargo.toml  app.rs  lib.rs  todo.rs
rust/todo/crates/cmd/: Cargo.toml  main.rs
rust/todo/crates/models/: Cargo.toml  todo.rs
rust/todo/crates/services/: Cargo.toml  todo.rs
rust/todo/migrations/: 0001_create_todos.sql
rust/types/src/: main.rs
rust/variable_binding/src/: main.rs
