[package]
name = "graceful-shutdown"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.17" }
miette = { version = "7.2.0", features = ["fancy"] }
tokio-graceful-shutdown = { version = "0.19.2" }
tracing-subscriber = "0.3.17"
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
tracing = { version = "0.1.37", default-features = false }


[features]
# Enable task naming and task caller location.
tracing = ["tokio/tracing"]