[package]
name = "api"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
services = { path = "../services" }
models = { path = "../models" }
axum = "0.8.8"
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", 
    "postgres", 
    "uuid", 
    "chrono"
]}
