[package]
name = "cmd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cmd"
path = "main.rs"

[dependencies]
api = { path = "../api" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", 
    "postgres", 
    "uuid", 
    "chrono"
]}