[package]
name = "models"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls", 
    "postgres", 
    "uuid", 
    "chrono"
]}